--- a/Portpholio/src/style.css
+++ b/Portpholio/src/style.css
@@ -99,14 +99,33 @@
 /* about close */
 
 
-
+.skilsection{
+    color: white;
+    background-color: #202328;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
 .skilprogressbar{
     display: grid;
     grid-template-columns: repeat(2,1fr);
+    gap: 50px;
+    line-height: 3.0;
 }
 
 
+/* works start */
+.work{
+    padding-bottom: 50px;
+}
+.cardContainer{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    gap: 20px;
+    align-items: center;
 
+}
+
+/* works close */
 
 
 
@@ -175,6 +194,7 @@ input:focus, textarea:focus {
 
 /* contact form css close */
 
+
 /* footer section */
 .footer {
     background-color: #282c34; 
@@ -213,6 +233,10 @@ input:focus, textarea:focus {
 /* media query */
 
 @media (max-width: 500px) {
+    .cardContainer{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+    }
     #home {
         font-size: 1.5rem;
     }
@@ -227,6 +251,22 @@ input:focus, textarea:focus {
         width: 100%; 
         margin-top: 10px;
     }
+    #about {
+        padding-top: 20px; /* Further adjust padding */
+        padding-bottom: 30px;
+    }
+
+    .left-side img {
+        width: 90%; /* Slightly smaller image */
+        height: auto; /* Maintain aspect ratio */
+        border-radius: 15px; /* Slightly less rounding */
+    }
+    .skilprogressbar{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        gap: 50px;
+        line-height: 3.0;
+    }
 }
 
 @media (min-width: 501px) and (max-width: 768px) {
@@ -236,10 +276,44 @@ input:focus, textarea:focus {
     .navbar .nav-link {
         margin: 0 10px; 
     }
+    #about {
+        padding-top: 30px; /* Adjust padding */
+        padding-bottom: 40px;
+    }
+
+    .left-side img {
+        width: 100%; /* Make the image responsive */
+        height: auto; /* Maintain aspect ratio */
+    }
+    .skilprogressbar{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        gap: 50px;
+        line-height: 3.0;
+    }
 }
 
 @media (min-width: 769px) and (max-width: 1000px) {
+    .cardContainer{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+    }
     #home {
         font-size: 2rem;
+    }
+    #about {
+        padding-top: 40px; /* Adjust padding */
+        padding-bottom: 50px;
+    }
+
+    .left-side img {
+        width: 80%; /* Make image a bit smaller */
+        height: auto; /* Maintain aspect ratio */
+    }
+    .skilprogressbar{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        gap: 50px;
+        line-height: 3.0;
     }
 }
